--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 吴小民的博客 | Hux Blog
+title: wfm Blog
+SEOTitle: 吴小民的博客 | wfm Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "关于程序与设计、黑客与画家 | 吴小民，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @Hux吴小民 的个人博客，与你一起发现更大的世界。"
-keyword: "吴小民, Hux吴小民, Hux, 鬼栈, huxpro, @huxpro, 吴小民的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
+email: wfm19970@gmail.com
+description: "关于程序与设计、黑客与画家 | 吴小民，Web & Mobile Lover，Software Engineer，UX Designer | 这里是 @wfm吴小民 的个人博客，与你一起发现更大的世界。"
+keyword: "吴小民,  博客, 个人网站, 互联网, Web, JavaScript, 前端, 设计"
 url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
@@ -13,11 +13,11 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-twitter_username:   huxpro
-#facebook_username:  huxpro
+weibo_username:     wfmpro
+zhihu_username:     wfmpro
+github_username:    wfmpro
+twitter_username:   wfmpro
+#facebook_username:  wfmpro
 #linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+disqus_username: wfm
 
 # Netease settings
 netease_comment: false
